--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <header>
-            <h1>título do site</h1>
+            <h1>Cusos grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>curso de html5 e css3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Asperiores, ratione quis eligendi corporis commodi dolorum facilis voluptate odio, consequuntur vero sunt quasi quia. Eum mollitia suscipit vero, itaque praesentium error!</p>
         </article>
         <article>
-            <h2>Artiho 002</h2>
-            <p>Texto artigo 002</p>
+            <h2>curso de javascript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, suscipit ducimus eum modi officiis, recusandae sequi dolor odit, assumenda qui numquam consectetur incidunt magni fugiat quae obcaecati sapiente veritatis dignissimos.</p>
         </article>
     </main>
 </body>
