--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <main>
         <header>
-            <h1>Cusos grátis</h1>
+            <h1>Cursos grátis</h1>
         </header>
         <article>
             <h2>curso de html5 com css3</h2>
