--- a/index.html
+++ b/index.html
@@ -10,14 +10,17 @@
     <main>
         <header>
             <h1>Cursos grátis</h1>
+            <img src="imagens/curso-em-video-cor.png" alt="Curso em Video">
         </header>
         <article>
-            <h2>curso de html5 com css3</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Asperiores, ratione quis eligendi corporis commodi dolorum facilis voluptate odio, consequuntur vero sunt quasi quia. Eum mollitia suscipit vero, itaque praesentium error!</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <img class="lado" src="imagens/curso-html-css.png" alt="Curso em Video">
+            <p>A <abbr title="HyperText Markup Language"> HTML</abbr> ipsum dolor sit amet consectetur, adipisicing elit. Asperiores, ratione quis eligendi corporis commodi dolorum facilis voluptate odio, consequuntur vero sunt quasi quia.<abbr title="Cascading style Sheets"> CSS </abbr> Eum mollitia suscipit vero, itaque praesentium error!</p>
         </article>
         <article>
             <h2>curso de javaScript</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, suscipit ducimus eum modi officiis, recusandae sequi dolor odit, assumenda qui numquam consectetur incidunt magni fugiat quae obcaecati sapiente veritatis dignissimos.</p>
+            <img class="lado" src="imagens/curso-javascript.png" alt="Curso javaScript">
+            <p><abbr title="javaScript">javaScript</abbr> ipsum dolor sit amet consectetur adipisicing elit.<abbr title="Document Object Model">DOM</abbr> Molestias, suscipit ducimus eum modi officiis, recusandae sequi dolor odit, assumenda qui numquam consectetur incidunt magni fugiat quae obcaecati sapiente veritatis dignissimos.</p>
         </article>
     </main>
 </body>
