--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
             <h2>Curso de HTML5 com CSS3</h2>
             <img class="lado" src="imagens/curso-html-css.png" alt="Curso em Video">
             <p>A <abbr title="HyperText Markup Language"> HTML</abbr> ipsum dolor sit amet consectetur, adipisicing elit. Asperiores, ratione quis eligendi corporis commodi dolorum facilis voluptate odio, consequuntur vero sunt quasi quia.<abbr title="Cascading style Sheets"> CSS </abbr> Eum mollitia suscipit vero, itaque praesentium error!</p>
-        </article>
+            <p><a href="https://youtube.com/playlist?list=PLHz_AreHm4dlAnJ_jJtV29RFxnPHDuk9o&si=SXIDP4uMqxcEBf5V">Acesse o curso de HTML5</a></p> 
+           </article>
         <article>
-            <h2>curso de javaScript</h2>
+            <h2>Curso de JavaScript</h2>
             <img class="lado" src="imagens/curso-javascript.png" alt="Curso javaScript">
-            <p><abbr title="javaScript">javaScript</abbr> ipsum dolor sit amet consectetur adipisicing elit.<abbr title="Document Object Model">DOM</abbr> Molestias, suscipit ducimus eum modi officiis, recusandae sequi dolor odit, assumenda qui numquam consectetur incidunt magni fugiat quae obcaecati sapiente veritatis dignissimos.</p>
+            <p><abbr title="javaScript">JavaScript</abbr> ipsum dolor sit amet consectetur adipisicing elit.<abbr title="Document Object Model">DOM</abbr> Molestias, suscipit ducimus eum modi officiis, recusandae sequi dolor odit, assumenda qui numquam consectetur incidunt magni fugiat quae obcaecati sapiente veritatis dignissimos.</p>
+            <p> <a href="https://youtube.com/playlist?list=PLHz_AreHm4dlsK3Nr9GVvXCbpQyHQl1o1&si=A6dEgILuWLvkSBE8">Acesse o curso de javaScript</a> </p>
         </article>
     </main>
 </body>
